; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap.c_pagevec_lookup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap.c_pagevec_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pagevec = type { i32, i32 }
%struct.address_space = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pagevec_lookup(%struct.pagevec* %0, %struct.address_space* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.pagevec*, align 8
  %6 = alloca %struct.address_space*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.pagevec* %0, %struct.pagevec** %5, align 8
  store %struct.address_space* %1, %struct.address_space** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.address_space*, %struct.address_space** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load %struct.pagevec*, %struct.pagevec** %5, align 8
  %13 = getelementptr inbounds %struct.pagevec, %struct.pagevec* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @find_get_pages(%struct.address_space* %9, i32 %10, i32 %11, i32 %14)
  %16 = load %struct.pagevec*, %struct.pagevec** %5, align 8
  %17 = getelementptr inbounds %struct.pagevec, %struct.pagevec* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load %struct.pagevec*, %struct.pagevec** %5, align 8
  %19 = call i32 @pagevec_count(%struct.pagevec* %18)
  ret i32 %19
}

declare dso_local i32 @find_get_pages(%struct.address_space*, i32, i32, i32) #1

declare dso_local i32 @pagevec_count(%struct.pagevec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
